--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
 
   <section id="home">
-    <img src="assets/images/michelle.jpg"></img>
+    <img src="assets/images/michelle.jpeg"></img>
     <h1>Hello,I am Michelle</h1>
     <hr class="vertical">
     <p>I’m Michelle Zhou, a <b>creative thinker, customer-driven, efficient, problem solver</b> who comes full equipped with an innovative spirit and proven track record of successful integration and synergy of <strong>web development, software development</strong> and overall business development.
