--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@ processors to decrease the execution time by 54% with 4 cores</li>
   </article>
 
   <article id="resume">
-  <iframe width=100% height="1000" src='assets/' frameborder='0' allowfullscreen></iframe>
+  <iframe width=100% height="1000" src='assets/michelle.pdf' frameborder='0' allowfullscreen></iframe>
   </article>
 
   <article id="contact">
